@@ -9,6 +9,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -54,7 +55,7 @@ public class StorageService {
                         throw new RuntimeException("Error subiendo archivo: " + file.getOriginalFilename(), e);
                     }
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public boolean deleteImage(String imageUrl) {
